# ChangeLog for app-shells/pdksh
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-shells/cvs-repo/gentoo-x86/app-shells/pdksh/Attic/ChangeLog,v 1.22 2008/12/30 20:47:27 angelos Exp $

  30 Dec 2008; Christoph Mende <angelos@gentoo.org> pdksh-5.2.14-r4.ebuild:
  QA: Respect CC (bug 243704)

  15 May 2007; Thilo Bangert <bangert@gentoo.org> metadata.xml:
  add <herd>no-herd</herd>

  08 Apr 2007; Markus Ullmann <jokey@gentoo.org> pdksh-5.2.14-r4.ebuild:
  Minor QA and restrict b0rked tests

  21 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  04 Dec 2005; Tom Gall <tgall@gentoo.org> pdksh-5.2.14-r4.ebuild:
  stable on ppc64

  12 Sep 2004; Tavis Ormandy <taviso@gentoo.org> pdksh-5.2.14-r4.ebuild:
  block app-shells/ksh bug #63802

  15 Apr 2004; Michael McCabe <randy@gentoo.org> pdksh-5.2.14-r4.ebuild:
  Adding s390 keywords

  13 Jan 2004; Jon Portnoy <avenj@gentoo.org> pdksh-5.2.14-r4.ebuild :
  Stable on AMD64.

  04 Jan 2004; Seemant Kulleen <seemant@gentoo.org> pdksh-5.2.14-r4.ebuild,
  files/pdksh-5.2.14-coreutils-posix-fix.patch:
  patch for new coreutils syntax, thanks to: Stefan Knoblich <stkn@gentoo.org>
  in bug #31835

  29 May 2003; Rainer Groesslinger <scandium@gentoo.org>
  pdksh-5.2.14-r4.ebuild:
  fixed a typo in the homepage field

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*pdksh-5.2.14-r4 (13 Apr 2002)

  19 Mar 2003; Aron Griffis <agriffis@gentoo.org> pdksh-5.2.14-r4.ebuild:
  Mark stable on alpha

  04 Nov 2002; Seemant Kulleen <seemant@gentoo.org> pdksh-5.2.14-r4.ebuild :

  Changed install path to install the ksh binary into /bin instead of
  /usr/bin.  Thanks to: gilles_gros@yahoo.com (Gilles G) in bug #10229

  28 Jul 2002; Calum Selkirk <cselkirk@gentoo.org> pdksh-5.2.14-r4.ebuild,
  pdksh-5.2.14-r3.ebuild :

  Added ppc to KEYWORDS.
  Fixed date on copyright header.  
