@@ -4,13 +4,13 @@ Hash: SHA1
 AUX pdksh-5.2.14-coreutils-posix-fix.patch 439 RMD160 78c94393206e83cb81facc8e586f9b356e7aec4b SHA1 ada8c8cfc5a4904f4a9ddcee275bb20ae2a9d748 SHA256 1ab6f9ba98a20ae11a98e90170f3aa73cc087bd39c9067406423b9c30852e216
 DIST pdksh-5.2.14-patches.1 4435 RMD160 b23c971b7446af63bbc2db85032d51932dc2672e SHA1 467da6464f8c98b9a340af17d66a335498cc7fcb SHA256 b4adfc47e4d78eb8718ee10f7ffafc218b0e9d453413456fab263985ae02d356
 DIST pdksh-5.2.14.tar.gz 480107 RMD160 3ecb47ac7c7fc43445806a68c740c94278e2368f SHA1 8b022e45de7691ef330f13b0981f0cff30b4047d SHA256 ab15bcdd50f291edc632bca351b2edce5405d4f2ce3854d3d548d721ab9bbfa6
-EBUILD pdksh-5.2.14-r4.ebuild 1038 RMD160 4e41115a9c23551f0dd89cdf73026b7a1f4b241f SHA1 dcc5a96d056e3cf6c89e6136b19706fa5d16b0a0 SHA256 f0d2444a7091525fddc0d31f4ad3f25c840cfb8b6117ee08039772f10986e60c
-MISC ChangeLog 2943 RMD160 16d17167599d1548b2ba001a2ae60a9724dadca9 SHA1 4130148fcd0fe5e1f6941d0c343b0161b2dd2002 SHA256 e76d887fa2c3bfd183d92c33951c85a45fbb1bb45fbcdcbb6a0e99620f438a1e
+EBUILD pdksh-5.2.14-r4.ebuild 1091 RMD160 ce8d176784539944ec3ef787ab83191595193e89 SHA1 0c3ddc3b8eb6cd1be2d7ef934c6062f7b442e4bb SHA256 eebbae6448c5656fdb5d5ea7b4900cf75b1e2488e93ef5fa124324b964c0c64f
+MISC ChangeLog 3097 RMD160 1318b1fb8757c4436cf4be3188ab57833e07623f SHA1 f3f6ee7a0abb5651c333979d71f75c8c524f65e5 SHA256 68713474ecc4dcf0f287edf1b2823afed1e0b896804e805ba2ce245fd35d0115
 MISC metadata.xml 231 RMD160 c13056229989c3d4f448a7c7abcff3f4ee7ce13c SHA1 2d63dfb700b223f8f37c078692a81b2237896bce SHA256 4595c2615fd7c9095517949b1a920d4457f92801eb9d46307b18aafe58ec2a8a
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.9 (GNU/Linux)
+Version: GnuPG v2.0.10 (GNU/Linux)
 
-iEYEARECAAYFAklaiOoACgkQKhnDs22gwa8n0QCgxsXF9nMSLvdzH9rVhMJ1ztgc
-PykAnRdogWzfzGpEjgyC5rBa/f6jq9xp
-=fLvk
+iEYEARECAAYFAknFALMACgkQwnQyISwouHztJQCcChig9h6PHKkuwZE7O7F9PoqE
+m3wAoKqZib9egLobATpTJb+Jbe6we/+G
+=Ymt6
 -----END PGP SIGNATURE-----
