@@ -1,6 +1,9 @@
 # ChangeLog for app-shells/pdksh
-# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-shells/cvs-repo/gentoo-x86/app-shells/pdksh/Attic/ChangeLog,v 1.22 2008/12/30 20:47:27 angelos Exp $
+# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/app-shells/cvs-repo/gentoo-x86/app-shells/pdksh/Attic/ChangeLog,v 1.23 2009/03/21 14:58:19 truedfx Exp $
+
+  21 Mar 2009; Harald van Dĳk <truedfx@gentoo.org> pdksh-5.2.14-r4.ebuild:
+  Avoid creating config.h twice; the second time can fail and is unnecessary
 
   30 Dec 2008; Christoph Mende <angelos@gentoo.org> pdksh-5.2.14-r4.ebuild:
   QA: Respect CC (bug 243704)
